# aawazz-mcp

./: .gitignore  LICENSE  README.md  SPEC.md  SPEC_v1.3.md  SPEC_v1.4.md  pyproject.toml
assets/: README.md
examples/clients/: claude_desktop.json  cline.json  codex.toml  continue.yaml  gemini_cli.json  goose.yaml  zed.json
examples/termux/: aawazz.toml  claude_code.json  setup-pulseaudio.sh
scripts/: prefetch_models.py
src/aawazz_mcp/: __init__.py  __main__.py  cli.py  config.py  converse.py  dictate.py  dispatcher.py  provider_base.py  registry.py  resources.py  routing.py  server.py
src/aawazz_mcp/audio/: __init__.py  capture.py  dialogue.py  dsp.py  lang_detect.py  paths.py  playback.py  sentence_chunker.py  termux_media.py  termux_mic.py  termux_tts.py
src/aawazz_mcp/backends/: __init__.py  base.py  local.py  remote.py
src/aawazz_mcp/models/: __init__.py  stt_loader.py  tts_loader.py  whisper_stt.py
src/aawazz_mcp/post_processors/: __init__.py  dsp.py  gain.py  vad.py
src/aawazz_mcp/providers/: __init__.py  gtts_provider.py  kokoro.py  moonshine.py  pipefish.py  piper.py  shell_playback.py  sounddevice_capture.py  termux_media_playback.py  termux_mic_capture.py  tiny_tts.py  whisper.py  xtts.py
src/aawazz_mcp/vision/: __init__.py  termux_camera.py
tests/: conftest.py  test_capture_playback.py  test_converse.py  test_dialogue.py  test_dictate_termux.py  test_dispatcher.py  test_dsp.py  test_kokoro_provider.py  test_lang_detect.py  test_listen.py  test_local_backend.py  test_paths.py  test_pipefish_provider.py  test_piper_provider.py  test_post_processors.py  test_providers.py  test_registry.py  test_respond.py  test_respond_lang_mismatch.py  test_routing.py  test_routing_llm.py  test_sentence_chunker.py  test_server.py  test_smoke_local.py  test_smoke_remote.py  test_termux_camera.py  test_termux_media_playback.py  test_termux_mic_capture.py  test_termux_tts.py  test_voices_list_v2.py  test_whisper_stt.py  test_xtts_provider.py
