[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aawazz-mcp"
version = "1.0.0"
description = "Portable local-CPU TTS + STT MCP server (Hindi/Urdu आवाज़ — voice/sound). Bundles tiny-tts + Moonshine; optional remote-FastAPI mode."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "nixpt", email = "praabinn@gmail.com" }]
keywords = ["mcp", "tts", "stt", "voice", "speech", "moonshine", "tiny-tts", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.24,<2.0",
    "httpx>=0.27",
    "soundfile>=0.12",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "pydantic>=2.5",
    "tiny-tts>=0.3.2",
    "moonshine-voice>=0.0.59",
    "nltk>=3.8",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
aawazz-mcp = "aawazz_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/nixpt/aawazz-mcp"
Repository = "https://github.com/nixpt/aawazz-mcp"
Issues = "https://github.com/nixpt/aawazz-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aawazz_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "remote: tests that require captain's running aawazz-mouth/ears FastAPI servers (port 7861/7862)",
    "mic: tests that require a working audio input device",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]  # line-length handled by formatter
