[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aawazz-mcp"
version = "1.3.0"
description = "Portable local-CPU TTS + STT MCP server (Hindi/Urdu/Nepali आवाज़ — voice/sound). Bundles tiny-tts + Moonshine; optional remote-FastAPI mode."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "nixpt", email = "praabinn@gmail.com" }]
keywords = ["mcp", "tts", "stt", "voice", "speech", "moonshine", "tiny-tts", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.24,<2.0",
    "httpx>=0.27",
    "soundfile>=0.12",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "pydantic>=2.5",
    "tiny-tts>=0.3.2",
    "moonshine-voice>=0.0.59",
    "nltk>=3.8",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
# Optional: enable non-English speak() (gTTS) and Nepali transcribe() (Whisper).
# English speak/listen/transcribe work without these.
multilingual = [
    "gtts>=2.5",
    "transformers>=4.40",
    "torch>=2.0",
]
# Optional: Piper ONNX TTS — multi-voice, multi-language, offline after voice
# download. Voices auto-download to ~/.local/share/aawazz/piper-voices/ on
# first use unless AAWAZZ_PIPER_AUTO_DOWNLOAD=0.
piper = [
    "piper-tts>=1.4,<2.0",
]
# Optional: Kokoro-82M ONNX TTS — pure-ONNX (no torch), 24 kHz output, 50+
# voices spanning English, Japanese, Mandarin, Spanish, French, Hindi,
# Italian, Portuguese. Model + voices.bin auto-download to
# ~/.local/share/aawazz/kokoro/ on first use unless AAWAZZ_KOKORO_AUTO_DOWNLOAD=0.
kokoro = [
    "kokoro-onnx>=0.4,<1.0",
]
# Optional: Coqui XTTS-v2 — voice cloning, 17 languages, ~2 GB model. Pulls
# torch (already required by [multilingual]). The TTS package autoloads the
# model from HF on first use.
xtts = [
    "coqui-tts>=0.27,<0.28",
]
# Optional: WebRTC VAD for silence-trim post-processor. ``webrtcvad-wheels``
# is a re-packaging of webrtcvad with precompiled binary wheels (the original
# webrtcvad needs a C compiler at install time and lacks py3.14 wheels).
vad = [
    "webrtcvad-wheels>=2.0.14",
]
# Optional: Language detection for v1.4 respond() lang_mismatch policy.
# lingua-py is more accurate on short text than the older langdetect package
# (LLM streaming chunks are often <50 chars). Pure-Python, ~5 ms / chunk.
langdetect = [
    "lingua-language-detector>=2.0",
]

[project.scripts]
aawazz-mcp = "aawazz_mcp.cli:main"
aawazz-dictate = "aawazz_mcp.dictate:main"

[project.urls]
Homepage = "https://github.com/nixpt/aawazz-mcp"
Repository = "https://github.com/nixpt/aawazz-mcp"
Issues = "https://github.com/nixpt/aawazz-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aawazz_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "remote: tests that require captain's running aawazz-mouth/ears FastAPI servers (port 7861/7862)",
    "mic: tests that require a working audio input device",
    "slow: tests that load tiny-tts / Moonshine models (>5s on cold cache)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]  # line-length handled by formatter
